--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -72,3 +72,7 @@ pt:
   l1: Consulados extrangeiros no Brasil
   l2: Representações do Brasil no exterior
   note: Valores sujeitos a alteração sem prévio aviso e sujeito à disponibilidade de lugares.
+  publish: Publicado 
+  warn: Sem imagem ou pdf
+  visible: Visível no site
+  invisible: Invisível no site
