--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -38,7 +38,7 @@ pt:
   star: Destaque
   options: Opções
   home: Início
-  info: Informações Úteis
+  info: Informações
   news: Notícias
   lnews: Última hora viajens
   about: Quem Somos
